--- a/blogsite/blog/templates/blog/base.html
+++ b/blogsite/blog/templates/blog/base.html
@@ -30,7 +30,9 @@
             <div id="sidebar" class="col-md-2">
                 <h2 class=>My blog</h2>
                 <p>This is my blog</p>
-                <p></p>
+                {% block sidebar %}
+                
+                {% endblock sidebar %}
             </div>
         </div>
     </body>
