--- a/blogsite/blog/templates/blog/post/detail.html
+++ b/blogsite/blog/templates/blog/post/detail.html
@@ -1,18 +1,69 @@
-{% extends "blog/base.html" %}
-
-{% block title %} {{ post.title}} {% endblock %}
-
+{% extends "blog/base.html" %} {% block title %} {{ post.title}} {% endblock %}
 {% block content %}
 
 <div class="card mt-4">
     <div class="card-header">
-        <a href="{{ post.get_absolute_url }}" class='fs-2' style="text-decoration:none">
+        <a
+            href="{{ post.get_absolute_url }}"
+            class="fs-2"
+            style="text-decoration: none"
+        >
             {{ post.title }}
         </a>
     </div>
     <div class="card-body">
-    <div class="card-title"><small>Published {{ post.publish }} by {{ post.author }} </small></div>
-    <p class="card-text">{{ post.body|linebreaks }}</p>
+        <div class="card-title">
+            <p class='tags'>Tags: 
+                {% for tag in post.tags.all %}
+                    <a href="{% url "blog:post_list_by_tag" tag.slug %}" >
+                        {{tag.name}}
+                    </a>
+                    {% if not forloop.last %}, {% endif %}
+                {% endfor %}
+            </p>
+            <small>Published {{ post.publish }} by {{ post.author }} </small>
+        </div>
+        <p class="card-text">{{ post.body|linebreaks }}</p>
     </div>
 </div>
+
+{% with comments.count as total_comments %}
+<h2>{{ total_comments }} comment{{ total_comments|pluralize }}</h2>
+{% endwith %} {% for comment in comments %}
+<table class="table table-hover">
+    <tbody>
+        <tr>
+            <td>
+                Comment {{ forloop.counter }} by {{ comment.name }} {{ comment.created}}
+                <p>{{comment.body}}</p>
+            </td>
+        </tr>
+    </tbody>
+</table>
+{% empty %}
+<p>There are no comments yet</p>
+
+{% endfor %} {% if new_comment %}
+<h5>Your commnet has been added.</h5>
+
+{% else %}
+<h2>Added a new comment</h2>
+<form method="POST" class="w-50">
+    {{ comment_form.as_p }} {% csrf_token %}
+    <button type="submit" class="btn btn-primary">Add comment</button>
+
+    {% endif %}
+</form>
+
+
+
 {% endblock %}
+
+{% block sidebar %}
+<h4>Similar Posts</h4>
+{% for post in similar_posts %}
+<p>
+    <a href="{{ post.get_absolute_url }}"> {{ post.title}} </a>
+</p>
+{% empty %} There area no similar posts yet. {% endfor %} 
+{% endblock sidebar %}
