--- a/blogsite/blog/templates/blog/post/list.html
+++ b/blogsite/blog/templates/blog/post/list.html
@@ -4,6 +4,9 @@
 
 {% block content %}
     <h1> My Blog</h1>
+    {% if tag %}
+        <h3> Posts tagged with "{{ tag.name }}" </h3>
+    {% endif %}
     {% for post in posts%}
         <div class="card mt-4">
             <div class="card-header">
@@ -12,7 +15,17 @@
                 </a>
             </div>
             <div class="card-body">
-            <div class="card-title"><small>Published {{ post.publish }} by {{ post.author }} </small></div>
+            <div class="card-title">
+                <p class='tags'>Tags: 
+                    {% for tag in post.tags.all %}
+                        <a href="{% url "blog:post_list_by_tag" tag.slug %}" >
+                            {{tag.name}}
+                        </a>
+                        {% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </p>
+                <small>Published {{ post.publish }} by {{ post.author }} </small>
+            </div>
             <p class="card-text">{{ post.body|truncatechars:60|linebreaks }}</p>
             </div>
         </div>
