--- a/blogsite/blog/templates/blog/base.html
+++ b/blogsite/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -19,7 +20,7 @@
     <body>
         <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="/blog/">
                 BlogSite
               </a>
             </div>
@@ -27,11 +28,23 @@
         
         <div class="row container-fluid">
             <div id="content" class="col-md-10">{% block content %}{% endblock %}</div>
-            <div id="sidebar" class="col-md-2">
+            <div id="sidebar" class="col-md-2 bg-light ">
                 <h2 class=>My blog</h2>
-                <p>This is my blog</p>
+                <p>This is my blog. I have written {% total_posts %} posts so far. </p>
+    
+                <h4> Latest Posts </h4>
+                {% show_latest_posts 3%}
+
+                <h4> Most commented posts</h4>
+                {% get_most_commented_posts as most_commented_post%}
+                <ul>
+                    {% for post in most_commented_post %}
+                        <li>
+                            <a href="{{ post.get_absolute_url }}"> {{ post.title }} </a>
+                        </li>
+                    {% endfor %}
+                </ul>
                 {% block sidebar %}
-                
                 {% endblock sidebar %}
             </div>
         </div>
