--- a/blogsite/blog/templates/blog/post/list.html
+++ b/blogsite/blog/templates/blog/post/list.html
@@ -1,9 +1,8 @@
 {% extends 'blog/base.html' %}
-
+{% load blog_tags %}
 {% block title %}My Blog{% endblock  %}
 
 {% block content %}
-    <h1> My Blog</h1>
     {% if tag %}
         <h3> Posts tagged with "{{ tag.name }}" </h3>
     {% endif %}
@@ -26,7 +25,7 @@
                 </p>
                 <small>Published {{ post.publish }} by {{ post.author }} </small>
             </div>
-            <p class="card-text">{{ post.body|truncatechars:60|linebreaks }}</p>
+            <p class="card-text">{{ post.body|markdown|truncatechars:60 }}</p>
             </div>
         </div>
         
