--- a/blogsite/blog/templates/blog/base.html
+++ b/blogsite/blog/templates/blog/base.html
@@ -18,20 +18,26 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+        <nav class="navbar bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/blog/">
-                BlogSite
-              </a>
+                <a href="/blog" class="navbar-brand">Navbar</a>
+                <form class="d-flex" role="search" method="GET" action="{% url 'blog:post_search' %}">
+                    {% csrf_token %}
+                    <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
             </div>
-          </nav>
+        </nav>
         
         <div class="row container-fluid">
-            <div id="content" class="col-md-10">{% block content %}{% endblock %}</div>
-            <div id="sidebar" class="col-md-2 bg-light ">
+            <div id="content" class="col-md-9">{% block content %}{% endblock %}</div>
+            <div id="sidebar" class="col-md-3 bg-light position-fixed" style="top: 20; right: 0; height: 100vh;">
                 <h2 class=>My blog</h2>
                 <p>This is my blog. I have written {% total_posts %} posts so far. </p>
-    
+                
+                <p>
+                    <a href="{% url "blog:post_feed" %}"> Subscribe to my RSS feed </a>
+                </p>
                 <h4> Latest Posts </h4>
                 {% show_latest_posts 3%}
 
